# links_connect

./: .gitignore  LICENSE  pyproject.toml  readme.md  requirements.txt
.github/workflows/: push-feature-branch.yml  push-main-branch.yml  pypi-publish.yml
links_connect/: __init__.py
links_connect/callbacks/: __init__.py  logger.py
links_connect/callbacks/decorator/: __init__.py  decorator.py  driver.py  registry.py
links_core/callbacks/: __init__.py  logger.py
links_core/callbacks/decorator/: __init__.py  registry.py
readme/: package_and_deploy.md
src/links_connect/: __init__.py
src/links_connect/callbacks/: __init__.py
src/links_connect/callbacks/_01_core/: __init__.py
src/links_connect/callbacks/_02_chained/: __init__.py
src/links_connect/callbacks/_03_logger/: __init__.py
src/links_connect/callbacks/_04_decorator/: driver.py  registry.py
src/links_connect/callbacks/_05_store/: __init__.py
src/links_connect/callbacks/chained/: __init__.py
src/links_connect/callbacks/decorator/: driver.py  registry.py
src/links_connect/callbacks/logger/: __init__.py
src/links_connect/callbacks/store/: __init__.py
src/links_connect/runner/: __init__.py  environment.py  native.py  robotfwrk.py
tests/links_connect/callbacks/: logger_test.py  ouch_test.py  store_test.py
tests/links_connect/callbacks/decorator/: decorator_test.py  driver_test.py  registry_test.py
tests/links_connect/runner/robotfwrk/suites/ouch/: __init__.robot  login.robot  main.resource  variables.py
tests/links_core/callbacks/decorator/: __pkg_test.py  registry_test.py
